Fix CORS: safe origin handling + JWT preflight bypass